# TechnicalCaseDatarisk

./: README.md  analise_regressao_dias_atraso.ipynb  pyproject.toml  requirements.txt
data/: submissao_case.csv
