[project]
name = "technicalcasedatarisk"
version = "0.1.0"
description = "Este projeto tem como objetivo analisar e prever quais clientes possuem risco de atrasar pagamentos utilizando técnicas de ciência de dados e aprendizado de máquina. A partir de bases de dados reais, são realizadas etapas de exploração, limpeza, análise estatística e modelagem preditiva, com foco em previsão de probabilidade de inadimplência."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
]
